ci: add fallback to deprecated 'jf rt docker-push' for older Artifactory (#9)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -232,13 +232,29 @@ jobs:
           jf c use "$SERVER_ID" || true
           # Build and push API image
           jf docker build --pull -t "$IMAGE_NAME" --build-name "$BUILD_NAME" --build-number "$BUILD_NUMBER" -f Dockerfile .
-          jf docker push "$IMAGE_NAME" --build-name "$BUILD_NAME" --build-number "$BUILD_NUMBER"
-          jf rt dp --project "${{ vars.PROJECT_KEY }}" "$IMAGE_NAME" "${{ vars.PROJECT_KEY }}-$SERVICE_NAME-docker-internal-local" --build-name="$BUILD_NAME" --build-number "$BUILD_NUMBER"
+          if jf docker push "$IMAGE_NAME" --build-name "$BUILD_NAME" --build-number "$BUILD_NUMBER"; then
+            :
+          else
+            echo "⚠️ jf docker push (api) failed. Falling back to jf rt docker-push (deprecated)"
+            IMAGE_REPO="${IMAGE_NAME#/*}"
+            IMAGE_REPO="${IMAGE_REPO%:*}"
+            REPO_NAME="${IMAGE_REPO%/*}"
+            jf rt docker-push "$IMAGE_NAME" "$REPO_NAME" --build-name="$BUILD_NAME" --build-number="$BUILD_NUMBER"
+          fi
+          jf rt dp --project "${{ vars.PROJECT_KEY }}" "$IMAGE_NAME" "${{ vars.PROJECT_KEY }}-$SERVICE_NAME-docker-internal-local" --build-name="$BUILD_NAME" --build-number "$BUILD_NUMBER" || echo "⚠️ jf rt dp failed; continuing"
           # Build and push worker image
           WORKER_IMAGE_NAME="$REGISTRY_URL/${{ vars.PROJECT_KEY }}-$SERVICE_NAME-docker-internal-local/${SERVICE_NAME}-worker:$IMAGE_TAG"
           jf docker build --pull -t "$WORKER_IMAGE_NAME" --build-name "$BUILD_NAME" --build-number "$BUILD_NUMBER" -f Dockerfile.worker .
-          jf docker push "$WORKER_IMAGE_NAME" --build-name "$BUILD_NAME" --build-number "$BUILD_NUMBER"
-          jf rt dp --project "${{ vars.PROJECT_KEY }}" "$WORKER_IMAGE_NAME" "${{ vars.PROJECT_KEY }}-$SERVICE_NAME-docker-internal-local" --build-name="$BUILD_NAME" --build-number "$BUILD_NUMBER"
+          if jf docker push "$WORKER_IMAGE_NAME" --build-name "$BUILD_NAME" --build-number "$BUILD_NUMBER"; then
+            :
+          else
+            echo "⚠️ jf docker push (worker) failed. Falling back to jf rt docker-push (deprecated)"
+            W_IMAGE_REPO="${WORKER_IMAGE_NAME#/*}"
+            W_IMAGE_REPO="${W_IMAGE_REPO%:*}"
+            W_REPO_NAME="${W_IMAGE_REPO%/*}"
+            jf rt docker-push "$WORKER_IMAGE_NAME" "$W_REPO_NAME" --build-name="$BUILD_NAME" --build-number="$BUILD_NUMBER"
+          fi
+          jf rt dp --project "${{ vars.PROJECT_KEY }}" "$WORKER_IMAGE_NAME" "${{ vars.PROJECT_KEY }}-$SERVICE_NAME-docker-internal-local" --build-name="$BUILD_NAME" --build-number "$BUILD_NUMBER" || echo "⚠️ jf rt dp failed; continuing"
 
       - name: Publish Build Info
         run: |
