CI: remove duplicate build-info publish and fix license evidence build ref

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -657,12 +657,6 @@ jobs:
             --project "${{ vars.PROJECT_KEY }}" \
             --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" || echo "⚠️ Generic evidence attachment failed (resources)"
 
-      - name: "[Build Info] Publish"
-        run: |
-          jf rt bag --project "${{ vars.PROJECT_KEY }}" "$BUILD_NAME" "$BUILD_NUMBER"
-          jf rt bce --project "${{ vars.PROJECT_KEY }}" "$BUILD_NAME" "$BUILD_NUMBER"
-          jf rt bp --project "${{ vars.PROJECT_KEY }}" "$BUILD_NAME" "$BUILD_NUMBER"
-
       - name: "[Summary] CI"
         run: |
           echo "## 🏗️ Build Summary" >> $GITHUB_STEP_SUMMARY
@@ -780,8 +774,8 @@ jobs:
             --predicate license-evidence.json \
             --markdown license-evidence.md \
             --predicate-type "https://fossa.com/evidence/license-scan/v2.1" \
-            --build-name "${{ steps.set-build-info.outputs.build_name }}" \
-            --build-number "${{ steps.set-build-info.outputs.build_number }}" \
+            --build-name "$BUILD_NAME" \
+            --build-number "$BUILD_NUMBER" \
             --project "${{ vars.PROJECT_KEY }}" \
             --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" \
             --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" || echo "⚠️ License compliance evidence attachment failed"
