--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -36,4 +36,33 @@ jobs:
             --base-url "$APPTRUST_BASE_URL" \
             --token "$APPTRUST_ACCESS_TOKEN"
 
+      - name: "[Tags] Enforce PROD 'latest' invariants"
+        run: |
+          set -euo pipefail
+          if ! command -v jq >/dev/null 2>&1; then sudo apt-get update -y && sudo apt-get install -y jq; fi
+          APP_KEY="bookverse-recommendations"
+          BASE="${{ vars.JFROG_URL }}/apptrust/api/v1"
+          TOKEN='${{ secrets.JFROG_ADMIN_TOKEN }}'
+          RESP=$(mktemp)
+          code=$(curl -sS -L -o "$RESP" -w "%{http_code}" \
+            "$BASE/applications/$APP_KEY/versions?limit=1000&order_by=created&order_asc=false" \
+            -H "Authorization: Bearer $TOKEN" -H "Accept: application/json" || echo 000)
+          if [[ "$code" -lt 200 || "$code" -ge 300 ]]; then
+            echo "❌ Failed to list versions (HTTP $code)" >&2; cat "$RESP" || true; exit 1
+          fi
+          DESIRED=$(jq -r '[.versions[] | select((.release_status|tostring|ascii_upcase)=="RELEASED" or (.release_status|tostring|ascii_upcase)=="TRUSTED_RELEASE") | .version] | unique | map(select(test("^[0-9]+\\.[0-9]+\\.[0-9]+$"))) | sort_by(split(".")|map(tonumber)) | last // empty' "$RESP")
+          if [[ -n "$DESIRED" ]]; then
+            CURR_TAG=$(jq -r --arg v "$DESIRED" '.versions[] | select(.version==$v) | (.tag // "")' "$RESP")
+            jq -n --arg ct "$CURR_TAG" '{tag:"latest", properties:{original_tag_before_latest:[$ct]}}' > body.json
+            curl -sS -L -X PATCH "$BASE/applications/$APP_KEY/versions/$DESIRED" -H "Authorization: Bearer $TOKEN" -H "Content-Type: application/json" -d @body.json | cat
+          fi
+          mapfile -t OTHERS < <(jq -r --arg v "$DESIRED" '.versions[] | select(.tag=="latest" and .version!=$v) | .version' "$RESP")
+          for ov in "${OTHERS[@]:-}"; do
+            [ -z "$ov" ] && continue
+            restore=$(jq -r --arg v "$ov" '.versions[] | select(.version==$v) | (.properties.original_tag_before_latest[0] // .version // "")' "$RESP")
+            printf '{"tag":"%s","delete_properties":["original_tag_before_latest"]}' "$restore" > body.json
+            curl -sS -L -X PATCH "$BASE/applications/$APP_KEY/versions/$ov" -H "Authorization: Bearer $TOKEN" -H "Content-Type: application/json" -d @body.json | cat
+          done
+          rm -f "$RESP" body.json || true
+
 
