--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,8 +131,13 @@ jobs:
             APP_VERSION="$MAJOR.$MINOR.$((PATCH + 1))"
             echo "⬆️ Latest=$LATEST_VERSION → Next=$APP_VERSION"
           else
-            APP_VERSION="1.0.0"
-            echo "🆕 No previous version, starting at $APP_VERSION"
+            echo "🆕 No existing versions found, starting fresh"
+            # Generate initial version between 1.0.0 to 2.5.9
+            MAJOR=1
+            MINOR=$((RANDOM % 6))  # 0-5
+            PATCH=$((RANDOM % 10)) # 0-9
+            APP_VERSION="$MAJOR.$MINOR.$PATCH"
+            echo "🎯 Generated initial version: $APP_VERSION"
           fi
           REGISTRY_URL=${REGISTRY_URL:-${{ vars.DOCKER_REGISTRY }}}
           IMAGE_TAG="$APP_VERSION"
