--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,10 +132,10 @@ jobs:
             echo "⬆️ Latest=$LATEST_VERSION → Next=$APP_VERSION"
           else
             echo "🆕 No existing versions found, starting fresh"
-            # Generate initial version between 1.0.0 to 2.5.9
-            MAJOR=1
-            MINOR=$((RANDOM % 6))  # 0-5
-            PATCH=$((RANDOM % 10)) # 0-9
+            # Generate initial random SemVer: major 1-5, minor 1-50, patch 1-50
+            MAJOR=$(( (RANDOM % 5) + 1 ))
+            MINOR=$(( (RANDOM % 50) + 1 ))
+            PATCH=$(( (RANDOM % 50) + 1 ))
             APP_VERSION="$MAJOR.$MINOR.$PATCH"
             echo "🎯 Generated initial version: $APP_VERSION"
           fi
@@ -379,8 +379,8 @@ jobs:
           TOKEN='${{ secrets.JFROG_ADMIN_TOKEN }}'
           list_next() { local name="$1"; local out; out="$(mktemp)"; local url="$JF_URL/artifactory/api/docker/$DOCKER_REPO/v2/$name/tags/list"; local code; code=$(curl -sS -L -o "$out" -w "%{http_code}" -H "Authorization: Bearer $TOKEN" "$url" || echo 000); if [[ "$code" -ge 200 && "$code" -lt 300 ]]; then jq -r '[.tags[]? | select(test("^[0-9]+\\.[0-9]+\\.[0-9]+$"))] | sort_by([ (split(".")[0]|tonumber),(split(".")[1]|tonumber),(split(".")[2]|tonumber) ]) | (last // empty)' "$out"; else echo ""; fi; rm -f "$out"; }
           last_api=$(list_next "$API_PACKAGE_NAME"); last_worker=$(list_next "$WORKER_PACKAGE_NAME")
-          if [[ -n "$last_api" ]]; then IFS='.' read -r ma mi pa <<<"$last_api"; pa=$((pa+1)); API_IMAGE_TAG="$ma.$mi.$pa"; else API_IMAGE_TAG="1.0.$(( (RANDOM % 5)+1 ))"; fi
-          if [[ -n "$last_worker" ]]; then IFS='.' read -r ma mi pa <<<"$last_worker"; pa=$((pa+1)); WORKER_IMAGE_TAG="$ma.$mi.$pa"; else WORKER_IMAGE_TAG="1.0.$(( (RANDOM % 5)+1 ))"; fi
+          if [[ -n "$last_api" ]]; then IFS='.' read -r ma mi pa <<<"$last_api"; pa=$((pa+1)); API_IMAGE_TAG="$ma.$mi.$pa"; else API_IMAGE_TAG="$(( (RANDOM % 5) + 1 )).$(( (RANDOM % 50) + 1 )).$(( (RANDOM % 50) + 1 ))"; fi
+          if [[ -n "$last_worker" ]]; then IFS='.' read -r ma mi pa <<<"$last_worker"; pa=$((pa+1)); WORKER_IMAGE_TAG="$ma.$mi.$pa"; else WORKER_IMAGE_TAG="$(( (RANDOM % 5) + 1 )).$(( (RANDOM % 50) + 1 )).$(( (RANDOM % 50) + 1 ))"; fi
           API_IMAGE_NAME="$REGISTRY_URL/$DOCKER_REPO/$API_PACKAGE_NAME:$API_IMAGE_TAG"
           WORKER_IMAGE_NAME="$REGISTRY_URL/$DOCKER_REPO/$WORKER_PACKAGE_NAME:$WORKER_IMAGE_TAG"
           GENERIC_REPO="${{ vars.PROJECT_KEY }}-${SERVICE_NAME}-internal-generic-nonprod-local"
