--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -378,12 +378,18 @@ jobs:
           JF_URL='${{ vars.JFROG_URL }}'
           TOKEN='${{ secrets.JFROG_ADMIN_TOKEN }}'
           list_next() { local name="$1"; local out; out="$(mktemp)"; local url="$JF_URL/artifactory/api/docker/$DOCKER_REPO/v2/$name/tags/list"; local code; code=$(curl -sS -L -o "$out" -w "%{http_code}" -H "Authorization: Bearer $TOKEN" "$url" || echo 000); if [[ "$code" -ge 200 && "$code" -lt 300 ]]; then jq -r '[.tags[]? | select(test("^[0-9]+\\.[0-9]+\\.[0-9]+$"))] | sort_by([ (split(".")[0]|tonumber),(split(".")[1]|tonumber),(split(".")[2]|tonumber) ]) | (last // empty)' "$out"; else echo ""; fi; rm -f "$out"; }
+          list_generic_latest() { local kind="$1"; local out; out="$(mktemp)"; local url="$JF_URL/artifactory/api/storage/$GENERIC_REPO/$SERVICE_NAME/$kind"; local code; code=$(curl -sS -L -o "$out" -w "%{http_code}" -H "Authorization: Bearer $TOKEN" -H "Accept: application/json" "$url" || echo 000); if [[ "$code" -ge 200 && "$code" -lt 300 ]]; then jq -r '[.children[]? | select(.folder==true) | .uri | ltrimstr("/") | select(test("^[0-9]+\\.[0-9]+\\.[0-9]+$"))] | sort_by([ (split(".")[0]|tonumber),(split(".")[1]|tonumber),(split(".")[2]|tonumber) ]) | (last // empty)' "$out"; else echo ""; fi; rm -f "$out"; }
           last_api=$(list_next "$API_PACKAGE_NAME"); last_worker=$(list_next "$WORKER_PACKAGE_NAME")
           if [[ -n "$last_api" ]]; then IFS='.' read -r ma mi pa <<<"$last_api"; pa=$((pa+1)); API_IMAGE_TAG="$ma.$mi.$pa"; else API_IMAGE_TAG="$(( (RANDOM % 5) + 1 )).$(( (RANDOM % 50) + 1 )).$(( (RANDOM % 50) + 1 ))"; fi
           if [[ -n "$last_worker" ]]; then IFS='.' read -r ma mi pa <<<"$last_worker"; pa=$((pa+1)); WORKER_IMAGE_TAG="$ma.$mi.$pa"; else WORKER_IMAGE_TAG="$(( (RANDOM % 5) + 1 )).$(( (RANDOM % 50) + 1 )).$(( (RANDOM % 50) + 1 ))"; fi
           API_IMAGE_NAME="$REGISTRY_URL/$DOCKER_REPO/$API_PACKAGE_NAME:$API_IMAGE_TAG"
           WORKER_IMAGE_NAME="$REGISTRY_URL/$DOCKER_REPO/$WORKER_PACKAGE_NAME:$WORKER_IMAGE_TAG"
           GENERIC_REPO="${{ vars.PROJECT_KEY }}-${SERVICE_NAME}-internal-generic-nonprod-local"
+          # Compute per-bundle SemVer: bump if exists, else random (major 1-5, minor 1-50, patch 1-50)
+          last_config=$(list_generic_latest "config")
+          if [[ -n "$last_config" ]]; then IFS='.' read -r ma mi pa <<<"$last_config"; pa=$((pa+1)); CONFIG_VERSION_TAG="$ma.$mi.$pa"; else CONFIG_VERSION_TAG="$(( (RANDOM % 5) + 1 )).$(( (RANDOM % 50) + 1 )).$(( (RANDOM % 50) + 1 ))"; fi
+          last_resources=$(list_generic_latest "resources")
+          if [[ -n "$last_resources" ]]; then IFS='.' read -r ma mi pa <<<"$last_resources"; pa=$((pa+1)); RESOURCES_VERSION_TAG="$ma.$mi.$pa"; else RESOURCES_VERSION_TAG="$(( (RANDOM % 5) + 1 )).$(( (RANDOM % 50) + 1 )).$(( (RANDOM % 50) + 1 ))"; fi
           echo "SERVICE_NAME=$SERVICE_NAME" >> $GITHUB_ENV
           echo "IMAGE_TAG=$API_IMAGE_TAG" >> $GITHUB_ENV
           echo "REGISTRY_URL=$REGISTRY_URL" >> $GITHUB_ENV
@@ -395,6 +401,8 @@ jobs:
           echo "GENERIC_REPO=$GENERIC_REPO" >> $GITHUB_ENV
           echo "API_IMAGE_TAG=$API_IMAGE_TAG" >> $GITHUB_ENV
           echo "WORKER_IMAGE_TAG=$WORKER_IMAGE_TAG" >> $GITHUB_ENV
+          echo "CONFIG_VERSION_TAG=$CONFIG_VERSION_TAG" >> $GITHUB_ENV
+          echo "RESOURCES_VERSION_TAG=$RESOURCES_VERSION_TAG" >> $GITHUB_ENV
 
       # Removed duplicate set-app-version step to avoid duplicate id/name conflicts
 
@@ -572,8 +580,8 @@ jobs:
       - name: "[Artifacts] Package config/resources"
         run: |
           mkdir -p artifacts
-          CONFIG_TGZ="artifacts/$SERVICE_NAME-config-$IMAGE_TAG.tar.gz"
-          RES_TGZ="artifacts/$SERVICE_NAME-resources-$IMAGE_TAG.tar.gz"
+          CONFIG_TGZ="artifacts/$SERVICE_NAME-config-${CONFIG_VERSION_TAG:-$IMAGE_TAG}.tar.gz"
+          RES_TGZ="artifacts/$SERVICE_NAME-resources-${RESOURCES_VERSION_TAG:-$IMAGE_TAG}.tar.gz"
           if [ -d config ]; then tar -czf "$CONFIG_TGZ" config; else echo "(no config dir)"; fi
           if [ -d resources ]; then tar -czf "$RES_TGZ" resources; else echo "(no resources dir)"; fi
           echo "CONFIG_TGZ=$CONFIG_TGZ" >> $GITHUB_ENV
@@ -582,11 +590,11 @@ jobs:
       - name: "[Artifacts] Upload bundles"
         run: |
           if [ -f "$CONFIG_TGZ" ]; then
-            jf rt u "$CONFIG_TGZ" "$GENERIC_REPO/$SERVICE_NAME/config/$IMAGE_TAG/" --flat=true \
+            jf rt u "$CONFIG_TGZ" "$GENERIC_REPO/$SERVICE_NAME/config/${CONFIG_VERSION_TAG:-$IMAGE_TAG}/" --flat=true \
               --build-name="$BUILD_NAME" --build-number="$BUILD_NUMBER"
           fi
           if [ -f "$RES_TGZ" ]; then
-            jf rt u "$RES_TGZ" "$GENERIC_REPO/$SERVICE_NAME/resources/$IMAGE_TAG/" --flat=true \
+            jf rt u "$RES_TGZ" "$GENERIC_REPO/$SERVICE_NAME/resources/${RESOURCES_VERSION_TAG:-$IMAGE_TAG}/" --flat=true \
               --build-name="$BUILD_NAME" --build-number="$BUILD_NUMBER"
           fi
           echo "✅ Uploaded generic bundles (if present)"
@@ -612,8 +620,8 @@ jobs:
           cat <<EOF > generic-bundles-evidence.json
           {
             "bundles": [
-              {"name": "$SERVICE_NAME-config", "version": "$IMAGE_TAG", "sha256": "$CONFIG_SHA", "path": "$SERVICE_NAME-config/$IMAGE_TAG/"},
-              {"name": "$SERVICE_NAME-resources", "version": "$IMAGE_TAG", "sha256": "$RES_SHA", "path": "$SERVICE_NAME-resources/$IMAGE_TAG/"}
+              {"name": "$SERVICE_NAME-config", "version": "${CONFIG_VERSION_TAG:-$IMAGE_TAG}", "sha256": "$CONFIG_SHA", "path": "$SERVICE_NAME-config/${CONFIG_VERSION_TAG:-$IMAGE_TAG}/"},
+              {"name": "$SERVICE_NAME-resources", "version": "${RESOURCES_VERSION_TAG:-$IMAGE_TAG}", "sha256": "$RES_SHA", "path": "$SERVICE_NAME-resources/${RESOURCES_VERSION_TAG:-$IMAGE_TAG}/"}
             ],
             "generatedAt": "$(date -u +%Y-%m-%dT%H:%M:%SZ)",
             "repository": "$GENERIC_REPO",
@@ -646,7 +654,7 @@ jobs:
             --predicate-type "Artifact Bundle" \
             --package-name "$SERVICE_NAME-config" \
             --package-repo-name "$GENERIC_REPO" \
-            --package-version "$IMAGE_TAG" \
+            --package-version "${CONFIG_VERSION_TAG:-$IMAGE_TAG}" \
             --project "${{ vars.PROJECT_KEY }}" \
             --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" || echo "⚠️ Generic evidence attachment failed (config)"
 
@@ -659,7 +667,7 @@ jobs:
             --predicate-type "Artifact Bundle" \
             --package-name "$SERVICE_NAME-resources" \
             --package-repo-name "$GENERIC_REPO" \
-            --package-version "$IMAGE_TAG" \
+            --package-version "${RESOURCES_VERSION_TAG:-$IMAGE_TAG}" \
             --project "${{ vars.PROJECT_KEY }}" \
             --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" || echo "⚠️ Generic evidence attachment failed (resources)"
 
