--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -930,7 +930,26 @@ jobs:
           echo "📨 Response Body:"; cat "$RESP_BODY" || true; echo
           if [ "$HTTP_STATUS" -ge 400 ]; then echo "❌ AppTrust API failed with $HTTP_STATUS"; exit 1; fi
           rm -f "$RESP_BODY"
-          echo "✅ Application version created: $APPLICATION_KEY@$APP_VERSION"
+          # Robust validation: fetch content and require status == COMPLETED
+          CONTENT_FILE=$(mktemp)
+          CONTENT_STATUS=$(curl -sS -L -o "$CONTENT_FILE" -w "%{http_code}" \
+            "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions/$APP_VERSION/content" \
+            -H "Authorization: Bearer ${{ secrets.JFROG_ADMIN_TOKEN }}" \
+            -H "Accept: application/json")
+          if [[ "$CONTENT_STATUS" != "200" ]]; then
+            echo "❌ Version content endpoint returned HTTP $CONTENT_STATUS for $APPLICATION_KEY@$APP_VERSION" >&2
+            echo "📨 Response Body:"; cat "$CONTENT_FILE" || true; echo
+            rm -f "$CONTENT_FILE"
+            exit 1
+          fi
+          VERSION_STATE=$(jq -r '.status // empty' "$CONTENT_FILE" 2>/dev/null || echo "")
+          echo "📨 Version Content:"; cat "$CONTENT_FILE" || true; echo
+          rm -f "$CONTENT_FILE"
+          if [[ "$VERSION_STATE" != "COMPLETED" ]]; then
+            echo "❌ Application version not in COMPLETED state (status='$VERSION_STATE') for $APPLICATION_KEY@$APP_VERSION" >&2
+            exit 1
+          fi
+          echo "✅ Application version created and validated (COMPLETED): $APPLICATION_KEY@$APP_VERSION"
 
       # Evidence Plan: App UNASSIGNED – slsa-provenance and jira-tickets (gate to DEV)
       - name: "[Evidence] Prepare UNASSIGNED templates"
