ci(recommendations): consolidate to single Promote workflow; add workflow_call; remove promote.std and promote.reusable; standardize inputs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,6 +166,8 @@ jobs:
 
       - name: "[Setup] JFrog config"
         run: |
+          jf c add bookverse-admin --interactive=false --url "${{ vars.JFROG_URL }}" --access-token "${{ secrets.JFROG_ADMIN_TOKEN }}" || true
+          jf c use bookverse-admin || true
           jf c show || true
 
       - name: "[Setup] Python"
@@ -989,7 +991,11 @@ jobs:
       - name: "[Evidence] Attach UNASSIGNED (SLSA, Jira)"
         env:
           EVIDENCE_PRIVATE_KEY: ${{ secrets.EVIDENCE_PRIVATE_KEY }}
+          JFROG_CLI_SERVER_ID: bookverse-admin
         run: |
+          # Force using the admin-configured JFrog server for evidence API calls
+          SERVER_ID="${JFROG_CLI_SERVER_ID:-bookverse-admin}"
+          jf c use "$SERVER_ID" || true
           set -euo pipefail
           if ! command -v envsubst >/dev/null 2>&1; then sudo apt-get update -y && sudo apt-get install -y gettext-base; fi
           NOW_TS=$(date -u +%Y-%m-%dT%H:%M:%SZ)
