--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -23,6 +23,46 @@ on:
         default: 'false'
         type: choice
         options: ['false', 'true']
+      service_name:
+        description: 'Service name override (optional)'
+        required: false
+        type: string
+      oidc_provider_name:
+        description: 'OIDC provider name for jfrog/setup-jfrog-cli'
+        required: false
+        type: string
+        default: 'bookverse-recommendations-github'
+      evidence_key_alias:
+        description: 'Evidence key alias (optional)'
+        required: false
+        type: string
+  workflow_call:
+    inputs:
+      target_stage:
+        description: 'Target stage (DEV, QA, STAGING, PROD)'
+        required: true
+        type: string
+      application_version:
+        description: 'Application version (SemVer). If empty, use latest.'
+        required: false
+        type: string
+      DEMO_MODE:
+        description: 'Enable demo mode (verbose logs, request tracing)'
+        required: false
+        type: string
+        default: 'false'
+      service_name:
+        description: 'Service name (e.g., inventory, checkout, recommendations, web)'
+        required: false
+        type: string
+      oidc_provider_name:
+        description: 'OIDC provider name for jfrog/setup-jfrog-cli'
+        required: false
+        type: string
+      evidence_key_alias:
+        description: 'Evidence key alias (if server-side aliasing is used)'
+        required: false
+        type: string
 
 jobs:
   promote:
@@ -79,7 +119,7 @@ jobs:
           SERVICE_NAME=recommendations
           APPLICATION_KEY="bookverse-$SERVICE_NAME"
           TARGET_STAGE='${{ inputs.target_stage }}'
-          APP_VERSION='${{ inputs.version }}'
+          APP_VERSION='${{ inputs.application_version || inputs.version }}'
           if [ -z "$APP_VERSION" ]; then
             RESP=$(curl -sS -H "Authorization: Bearer ${{ secrets.JFROG_ADMIN_TOKEN }}" -H "Accept: application/json" \
               "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions?limit=1&order_by=created&order_asc=false")
