chore(recommendations): simplify Promote workflow inputs to only target_stage and application_version

--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -13,27 +13,8 @@ on:
           - QA
           - STAGING
           - PROD
-      version:
-        description: 'Application version (SemVer). If empty, use latest.'
-        required: false
-        type: string
-      DEMO_MODE:
-        description: 'Enable demo mode (verbose logs, request tracing)'
-        required: false
-        default: 'false'
-        type: choice
-        options: ['false', 'true']
-      service_name:
-        description: 'Service name override (optional)'
-        required: false
-        type: string
-      oidc_provider_name:
-        description: 'OIDC provider name for jfrog/setup-jfrog-cli'
-        required: false
-        type: string
-        default: 'bookverse-recommendations-github'
-      evidence_key_alias:
-        description: 'Evidence key alias (optional)'
+      application_version:
+        description: 'Application version (SemVer) to promote (leave empty for latest)'
         required: false
         type: string
   workflow_call:
@@ -43,24 +24,7 @@ on:
         required: true
         type: string
       application_version:
-        description: 'Application version (SemVer). If empty, use latest.'
-        required: false
-        type: string
-      DEMO_MODE:
-        description: 'Enable demo mode (verbose logs, request tracing)'
-        required: false
-        type: string
-        default: 'false'
-      service_name:
-        description: 'Service name (e.g., inventory, checkout, recommendations, web)'
-        required: false
-        type: string
-      oidc_provider_name:
-        description: 'OIDC provider name for jfrog/setup-jfrog-cli'
-        required: false
-        type: string
-      evidence_key_alias:
-        description: 'Evidence key alias (if server-side aliasing is used)'
+        description: 'Application version (SemVer) to promote (leave empty for latest)'
         required: false
         type: string
 
@@ -74,21 +38,9 @@ jobs:
     permissions:
       contents: read
       id-token: write
-    env:
-      DEMO_MODE: "false"
     steps:
       - name: "[Setup] Checkout"
         uses: actions/checkout@v4
-
-      - name: "[Setup] DEMO_MODE"
-        if: ${{ inputs.DEMO_MODE == 'true' || env.DEMO_MODE == 'true' }}
-        run: |
-          echo "🔔 DEMO_MODE enabled"
-          echo "ACTIONS_STEP_DEBUG=true" >> $GITHUB_ENV
-          echo "ACTIONS_RUNNER_DEBUG=true" >> $GITHUB_ENV
-          echo "HTTP_DEBUG_LEVEL=verbose" >> $GITHUB_ENV
-          echo "BASH_XTRACE_ENABLED=1" >> $GITHUB_ENV
-          echo "LOG_LEVEL=DEBUG" >> $GITHUB_ENV
 
       - name: "[Setup] Prereqs (jq)"
         run: |
@@ -121,7 +73,7 @@ jobs:
           SERVICE_NAME=recommendations
           APPLICATION_KEY="bookverse-$SERVICE_NAME"
           TARGET_STAGE='${{ inputs.target_stage }}'
-          APP_VERSION='${{ inputs.application_version || inputs.version }}'
+          APP_VERSION='${{ inputs.application_version }}'
           if [ -z "$APP_VERSION" ]; then
             RESP=$(curl -sS -H "Authorization: Bearer ${{ secrets.JFROG_ADMIN_TOKEN }}" -H "Accept: application/json" \
               "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions?limit=1&order_by=created&order_asc=false")
