--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -492,7 +492,7 @@ jobs:
           # Re-enable the original push line below once Artifactory is upgraded.
           # jf docker push "$API_IMAGE_NAME" --build-name "$BUILD_NAME" --build-number "$BUILD_NUMBER"
           # Using deprecated fallback below: 'jf rt docker-push' (alias: 'jf rt dp').
-          jf rt dp --project "${{ vars.PROJECT_KEY }}" "$API_IMAGE_NAME" "$DOCKER_REPO"
+          jf rt dp --project "${{ vars.PROJECT_KEY }}" "$API_IMAGE_NAME" "$DOCKER_REPO" --build-name "$BUILD_NAME" --build-number "$BUILD_NUMBER"
           echo "✅ Built and pushed API image via JFrog CLI"
 
       - name: "[Build] Worker image"
@@ -502,7 +502,7 @@ jobs:
           # Re-enable the original push line below once Artifactory is upgraded.
           # jf docker push "$WORKER_IMAGE_NAME" --build-name "$BUILD_NAME" --build-number "$BUILD_NUMBER"
           # Using deprecated fallback below: 'jf rt docker-push' (alias: 'jf rt dp').
-          jf rt dp --project "${{ vars.PROJECT_KEY }}" "$WORKER_IMAGE_NAME" "$DOCKER_REPO"
+          jf rt dp --project "${{ vars.PROJECT_KEY }}" "$WORKER_IMAGE_NAME" "$DOCKER_REPO" --build-name "$BUILD_NAME" --build-number "$BUILD_NUMBER"
           echo "✅ Built and pushed Worker image via JFrog CLI"
 
       # Optional: Trivy image scan (simulated)
